# ComputerGraphics_ITMO

./: README.md
AutoBrightness/: main.cpp
AutoBrightness/picture/: colorPicture.cpp  colorPicture.h  grayScalePicture.cpp  grayScalePicture.h  picture.cpp  picture.h
AutoBrightness/test/input/: dark.ppm  gs.pgm  gsd.pgm  gsl.pgm  light.ppm  water.ppm
AutoBrightness/test/output/: dark.ppm  gs.pgm  gsd.pgm  gsl.pgm  light.ppm  water.ppm
AutoBrightness/util/: brightnessUtil.cpp  brightnessUtil.h
Dithering/: main.cpp
Dithering/entities/: picture.cpp  picture.h
Dithering/test/input/: grad.pgm  gs.pgm
Dithering/test/output/: grad.pgm  gs_0_0_2_0.pgm  gs_0_1_2_0.pgm  gs_0_2_2_0.pgm  gs_0_3_2_0.pgm  gs_0_4_2_0.pgm  gs_0_5_2_0.pgm  gs_0_6_2_0.pgm  gs_0_7_2_0.pgm
Dithering/util/: dithering_util.cpp  dithering_util.h
DrowLine/: main.cpp  picture.cpp  picture.h
DrowLine/entities/: line.cpp  line.h  picture.cpp  picture.h
DrowLine/entities/line/: line.cpp  line.h
DrowLine/util/: line_draw_util.cpp  line_draw_util.h
Simple_photo_modify_util/: CMakeLists.txt  main.cpp
Simple_photo_modify_util/picture/: color_pic.cpp  color_pic.h  gray_scale_pic.cpp  gray_scale_pic.h  picture.cpp  picture.h
Simple_photo_modify_util/test/input/: vertical.pgm
Simple_photo_modify_util/test/output/: tree.pgm  tree.ppm
Simple_photo_modify_util/util/: bnm_file_util.cpp  bnm_file_util.h
СolorSpaces/: main.cpp
СolorSpaces/entities/: colorPicture.cpp  colorPicture.h
СolorSpaces/util/: convertUtil.cpp  convertUtil.h  convertion_util.cpp  convertion_util.h
(+10 files in other folders)
